--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -7,8 +7,7 @@
 <div id="mc_embed_signup">
 <form action="https://jbgalumni.us12.list-manage.com/subscribe/post?u=7a7e8ff3d9e9cdd81de43c111&amp;id=69ef6fcb28" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Prisijunk prie JBG Alumnų naujienlaiškio gavėjų</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="indicates-required"><span class="asterisk">*</span> privalomas laukelis</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">El. paštas  <span class="asterisk">*</span>
 </label>
@@ -30,7 +29,7 @@
 </div>
 <div class="mc-field-group">
 	<label for="mce-MMERGE5">Gimnazijos baigimo metai (MMMM) </label>
-	<input type="text" value="" name="MMERGE5" class="" id="mce-MMERGE5">
+	<input type="number" min="1900" max="2050" value="" name="MMERGE5" class="" id="mce-MMERGE5">
 </div>
 <div class="mc-field-group">
 	<label for="mce-MMERGE7">Miestas </label>
@@ -49,7 +48,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7a7e8ff3d9e9cdd81de43c111_69ef6fcb28" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Prenumeruoti" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
